Navbar Alignment Fixed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -211,6 +211,7 @@ border: 2px solid #c295d8;
 }
 .gtco-nav ul {
   padding: 0;
+  padding-top: 2em;
   margin: 2px 0 0 0;
 }
 .gtco-nav ul li {
@@ -221,7 +222,7 @@ border: 2px solid #c295d8;
 }
 .gtco-nav ul li a {
   font-size: 16px;
-  padding: 30px 10px;
+  padding: 10px 10px;
   color: rgba(255, 255, 255, 0.7);
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
